(lang dune 1.11)
(using fmt 1.1)
(name sure-deploy)
(generate_opam_files true)
(maintainers "Marek Kubica <mku@issuu.com>")
(authors "Marek Kubica <mku@issuu.com>")
(source (github issuu/sure-deploy))
(bug_reports "https://github.com/issuu/sure-deploy/issues")
(documentation "https://issuu.github.io/sure-deploy/")
(license Apache-2.0)

(package
  (name sure-deploy)
  (depends
    (core (and (>= v0.11) (< v0.13)))
    (async (and (>= v0.11) (< v0.13)))
    (async_ssl (and (>= v0.11) (< v0.13)))
    (ppx_deriving_yojson (and (>= 3.3) (< 4.0)))
    (ppx_inline_test (and :with-test (>= v0.11) (< v0.13)))
    (cohttp-async (>= 2.1.1))
    (cohttp (>= 2.1.2))
    (yaml (>= 2.0.0))
    (yojson (and (>= 1.6) (< 2.0))))
  (synopsis "What `docker stack deploy` should actually have been"))
