opam-version: "1.2"
maintainer: "Marek Kubica <mku@issuu.com>"
author: "Marek Kubica <mku@issuu.com>"
homepage: "https://github.com/issuu/sure-deploy"
dev-repo: "https://github.com/issuu/sure-deploy.git"
bug-reports: "https://github.com/issuu/sure-deploy/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "core" {>= "v0.9"}
  "async"
  "ppx_deriving_yojson" {>= "3.1"}
  "jbuilder" {build}
  "cohttp-async"
]

