opam-version: "1.2"
maintainer: "Marek Kubica <mku@issuu.com>"
author: "Marek Kubica <mku@issuu.com>"
homepage: "https://github.com/issuu/sure-deploy"
dev-repo: "https://github.com/issuu/sure-deploy.git"
bug-reports: "https://github.com/issuu/sure-deploy/issues"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "core" {>= "v0.10" & < "v0.11"}
  "async" {>= "v0.10" & < "v0.11"}
  "ppx_deriving_yojson" {>= "3.1"}
  "jbuilder" {build}
  "menhir" {build}
  "cohttp-async"
  "yaml"
]

