opam-version: "1.2"
maintainer: "Marek Kubica <mku@issuu.com>"
author: "Marek Kubica <mku@issuu.com>"
homepage: "https://github.com/issuu/sure-deploy"
dev-repo: "https://github.com/issuu/sure-deploy.git"
bug-reports: "https://github.com/issuu/sure-deploy/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "core" {>= "v0.11" & < "v0.13"}
  "async" {>= "v0.11" & < "v0.13"}
  "async_ssl" {>= "v0.11" & < "v0.13"}
  "ppx_deriving_yojson" {>= "3.3" & < "4.0"}
  "dune" {build & > "1.7"}
  "cohttp-async" {>= "2.1.1"}
  "cohttp" {>= "2.1.2"}
  "yaml" {>= "2.0.0"}
  "yojson" {>= "1.6" & < "2.0"}
]
synopsis: "What `docker stack deploy` should actually have been"
